force-app/main/default/objects/Booking_Notification__c/Booking_Notification__c.object-meta.xml
<CustomObject>
    <label>Booking Notification</label>
    <nameField>
        <displayFormat>NOTIF-{00000}</displayFormat>
        <label>Booking Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>