force-app/main/default/objects/Booking_Notification__c/fields/Bus_Booking__c.field-meta.xml
<CustomField>
    <fullName>Bus_Booking__c</fullName>
    <label>Bus Booking</label>
    <referenceTo>Bus_Booking__c</referenceTo>
    <relationshipLabel>Booking Notifications</relationshipLabel>
    <relationshipName>Booking_Notifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>