force-app/main/default/objects/Booking_Notification__c/fields/Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Sent Date</label>
    <type>DateTime</type>
</CustomField>